test/scc_test/stmt/semantic-errors/050.a
050.t:3:12: error: return type does not match the function type